test: pass all integration and unit tests with shared Knex instance and in-memory DB

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "lint": "eslint .",
     "e2e": "npx playwright test",
     "scan": "trivy fs --scanners vuln ./"
