--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node server.js",
-    "test": "NODE_ENV=test jest",
-    "lint": "eslint .",
-    "e2e": "npx playwright test",
-    "scan": "trivy fs --scanners vuln ./"
+    "test": "jest",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report"
   },
   "repository": {
     "type": "git",
